--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       
       // Add event listener to box3 to arrange it with box2
       box3.addEventListener('click', function() {
-        if (box3.getAttribute('position')
+        if (box3.getAttribute('position'))
         if (box1.getAttribute('color') === doorColors[doorIndex]) {
       var message = document.querySelector('a-text');
       message.setAttribute('value', 'You solved the puzzle! Proceed to the next room.');
